create test for add a product to a cart and start to update the addProduct Controller
