# public/swagger.json
@@ -44,6 +44,24 @@ paths:
             $ref: "#/definitions/Token"
         404:
           description: "User not found"
+  /v1/products:
+    get:
+      tags:
+      - "Products"
+      security:
+      - auth: []
+      summary: "Products elements"
+      description: "This for authenticate users to get a list of all products."
+      operationId: "getListOfProducts"
+      produces:
+      - "application/json"
+      responses:
+        200:
+          description: "successful operation"
+          schema:
+            $ref: "#/definitions/ProductList"
+        400:
+          description: "Bad Request"
   /v1/resellers:
     post:
       tags:
@@ -101,6 +119,45 @@ definitions:
         type: "string"
         minValue: 8
         example: "123456789"
+    type: object
+  
+  Product:
+    properties:
+      id:
+        type: "integer"
+        format: "int64"
+      name:
+        type: "string"
+      description:
+        type: "string"
+      qty_available:
+        type: "integer"
+      price:
+        type: "number"
+      created_at:
+        type: "string"
+      updated_at:
+        type: "string"
+      deleted_at:
+        type: "string"
+    type: object
+  ProductInput:
+    properties:
+      name:
+        type: "string"
+      description:
+        type: "string"
+      qty_available:
+        type: "integer"
+      price:
+        type: "number"
+    type: object
+  ProductList:
+    properties:
+      products:
+        type: "array"
+        items:
+          $ref: "#/definitions/Products"
     type: object
   
   Reseller:
